# oshsh

./: LICENSE  README.md  pyproject.toml
oshsh/: __init__.py  cli.py  core.py  utils.py
scripts/: oshsh.py
